.metadata/.plugins/org.eclipse.cdt.ui/Test-feature-C-NEW.build.log
09:19:34 **** Auto Build of configuration Default for project Test-feature-C-NEW ****
make 
arm-poky-linux-gnueabi-gcc  -march=armv7-a -mthumb-interwork -mfloat-abi=hard -mfpu=neon -mtune=cortex-a9 --sysroot=/opt/poky/1.7/sysroots/cortexa9hf-vfp-neon-poky-linux-gnueabi -I"/home/siasunhebo/CLion-2/Test-feature-C-NEW" -I./sensorTest/ -I./TCP/ -I./App -I./CAN/ -I./Math/ -I./Odom_Calib/ -I./MPI204A -I./Timer -I./UART -I./PGV150 -I./AGV -I./Tools -I./include main.c ./CAN/can.c ./MPI204A/MPI204A.c ./Timer/Timer.c ./PGV150/PGV150.c ./UART/UART.c ./Odom_Calib/Odom_Calib.c ./Math/Trigonometric.c ./App/Interpolation.c ./App/motion_ctrl.c ./App/AGVControl.c ./App/Movement.c ./TCP/TCP.c ./TCP/1200.c ./AGV/agv.c ./Tools/Tools.c -o main -g -lpthread -lrt -lm
./App/AGVControl.c: In function 'AGV_Running':
./App/AGVControl.c:209:2: error: expected declaration specifiers before 'printf'
  printf("nEvent=%d",nEvent);
  ^
./App/AGVControl.c:210:2: error: expected declaration specifiers before 'printf'
  printf("OutOfTrack=%d",OutOfTrack);
  ^
./App/AGVControl.c:211:5: error: expected declaration specifiers before 'if'
     if (NO_EVENT == nEvent)
     ^
make: *** [main] 错误 1

09:19:36 Build Finished (took 1s.305ms)

